<resources>
    <string name="app_name" translatable="false">Tencocoa</string>

    <string name="accounts_file_name" translatable="false">TwitterAccounts.dat</string>
    <string name="mark_key" translatable="false">[private]</string>

    <string name="text_activity_first_setting_newapp_link" translatable="false">https://apps.twitter.com/</string>

    <string name="label_activity_first_setting_consumer_key" translatable="false">Consumer Key</string>
    <string name="label_activity_first_setting_consumer_secret" translatable="false">Consumer Secret</string>

    <string name="uri_camera_suffix" translatable="false">/Tencocoa</string>

    <string name="uri_twitter_oauth_callback" translatable="false">tencocoa://twitter-oauth-callback</string>
    <string name="uri_asset_licenses" translatable="false">file:///android_asset/licenses.html</string>

    <!-- default message(for unsupported locales) -->
    <string name="general_open">Open</string>
    <string name="general_close">Close</string>

    <string name="action_settings">Setting</string>
    <string name="title_activity_settings">Setting</string>

    <string name="title_activity_first_setting">API Key setting</string>
    <string name="text_activity_first_setting">
        Tencocoa recommends you to use your original API keys.\n
        Unless there is any exceptional circumstances, use your ones.\n
        Don\'t forget to set fill the "Callback URL" field with any value on Twitter App Setting.\n
        You can use the Tencocoa default API keys instead, Most of Write-Actions will be restricted (and, you can change API keys later).
    </string>

    <string name="label_activity_first_setting_consumer_ok">Use these CK/CS</string>
    <string name="label_activity_first_setting_consumer_use_default">Use default CK/CS</string>

    <string name="title_dialog_default_keys">
        Are you sure?\n
        Although you can change them later, it\'s more convenient to set them here.
    </string>

    <string name="label_dialog_default_keys_ok">Sure!</string>
    <string name="label_dialog_default_keys_cancel">Wait…</string>
    <string name="toast_activity_first_setting_consumer_empty">At least one of the fields is blank.</string>

    <string-array name="label_drawer_main_list">
        <item>Home</item>
        <item>Notifications</item>
        <item>User</item>
        <item>Direct Message</item>
        <item>Search</item>
    </string-array>

    <string name="label_activity_main_summary">Summary</string>
    <string name="label_activity_main_tweets">Tweets</string>
    <string name="label_activity_main_favorites">Favorites</string>
    <string name="label_activity_main_friends">Followings</string>
    <string name="label_activity_main_followers">Followers</string>

    <string name="label_item_status_retweeted_by">Retweeted by</string>

    <string name="label_dialog_new_status_title">New Tweet</string>
    <string name="label_dialog_new_status_reply">Reply</string>
    <string name="label_dialog_new_status_add_image">Add image(s)</string>
    <string name="label_dialog_new_status_update">Tweet</string>


    <string name="label_dialog_status_detail_fav">Favorite</string>
    <string name="label_dialog_status_detail_unfav">Unfavorite</string>
    <string name="label_dialog_status_detail_rt">Retweet</string>
    <string name="label_dialog_status_detail_favrt">Fav&amp;RT</string>
    <string name="label_dialog_status_detail_others">More…</string>
    <string name="label_dialog_status_detail_reply">Reply</string>
    <string name="label_dialog_status_detail_reply_blank">Blank Reply</string>
    <string name="label_dialog_status_detail_back">Back</string>

    <string name="label_activity_image_viewer_download">Download</string>
    <string name="label_activity_image_viewer_link">Copy image link to Clipboard</string>

    <string name="title_activity_accounts_list">Accounts</string>
    <string name="label_activity_accounts_list_new_account">Register New Account</string>
    <string name="text_activity_accounts_list_success">The authentication succeeded!</string>
    <string name="text_activity_accounts_list_failed">The authentication faild.\nPerhaps Device clock is wrong, or you don\'t set the "Callback URL" field of Twitter App?</string>

    <!-- Notification テンプレート -->
    <string name="notification_network_unavailable">The network service is unavailable.</string>
    <string name="notification_double_tap_to_exit">Double tap to exit.</string>

    <string name="notification_streaming_userstream_started_ticker">UserStream has been started</string>
    <string name="notification_streaming_userstream_started_text">Tencocoa connected to UserStream.</string>
    <string name="notification_streaming_userstream_finished_ticker">UserStream has been finished</string>
    <string name="notification_streaming_userstream_finished_text">Tencocoa disconnected UserStream.</string>
    <string name="notification_download_finished_ticker">Downloaded image successfully.</string>

    <string name="notification_update_status_sending">Sending your tweet...</string>
    <string name="notification_update_status_success">Tweeted successfully.</string>
    <string name="notification_update_status_fail">Failed to tweet: </string>
    <string name="notification_favorite_status_success">Favorited successfully.</string>
    <string name="notification_favorite_status_fail">Failed to favorite: </string>
    <string name="notification_unfavorite_status_success">Unfavorited successfully.</string>
    <string name="notification_unfavorite_status_fail">Failed to unfavorite: </string>
    <string name="notification_retweet_status_success">Retweeted successfully.</string>
    <string name="notification_retweet_status_fail">Failed to retweet: </string>

    <string name="popup_notification_favorited">Favorited by %1$s</string>
    <string name="popup_notification_unfavorited">Unfavorited by %1$s</string>
    <string name="popup_notification_followed">followed by %1$s</string>
    <string name="popup_notification_removed">removed by %1$s</string>
    <string name="popup_notification_retweeted">retweeted by %1$s</string>
    <string name="popup_notification_reply">Reply from %1$s</string>
    <string name="popup_notification_referred">Referred my tweet by %1$s</string>
    <string name="popup_notification_favorited_retweet">Favorited my retweet by %1$s</string>
    <string name="popup_notification_retweeted_retweet">Retweeted my retweet by %1$s</string>
    <string name="popup_notification_favorited_mention">Retweeted mention by %1$s</string>
    <string name="popup_notification_retweeted_mention">Retweeted mention by %1$s</string>

    <string name="notification_twitter_failed">Action failed: </string>
    <string name="twitter_error_32">Could not authenticate you.</string>
    <string name="twitter_error_34">Sorry, that page does not exist.</string>
    <string name="twitter_error_64">Your account is suspended and is not permitted to access this feature.</string>
    <string name="twitter_error_68">The Twitter REST API v1 is no longer active.</string>
    <string name="twitter_error_88">Rate limit exceeded. Try again later.</string>
    <string name="twitter_error_89">Invalid or expired token.</string>
    <string name="twitter_error_92">SSL is required.</string>
    <string name="twitter_error_130">Twitter is over capacity now.</string>
    <string name="twitter_error_131">Internal error occurred.</string>
    <string name="twitter_error_135">Could not authenticate you.</string>
    <string name="twitter_error_161">You are unable to follow more people at this time.</string>
    <string name="twitter_error_179">Sorry, you are not authorized to see this status.</string>
    <string name="twitter_error_185">User is over daily status update limit.</string>
    <string name="twitter_error_187">Status is a duplicate.</string>
    <string name="twitter_error_215">Bad authentication data.</string>
    <string name="twitter_error_226">This request looks like it might be automated.</string>
    <string name="twitter_error_231">User must verify login.</string>
    <string name="twitter_error_251">This endpoint has been retired and should not be used.</string>
    <string name="twitter_error_261">Tencocoa cannot perform write actions.</string>
    <string name="twitter_error_271">You can’t mute yourself.</string>
    <string name="twitter_error_272">You are not muting the specified user.</string>
    <string name="twitter_error_354">The text of your direct message is over the max character limit.</string>

    <string name="popup_update_count">%1$d new tweets</string>

    <string name="headline_favorited">Faved by %1$s: %2$s</string>
    <string name="headline_unfavorited">Unfaved by %1$s: %2$s</string>
    <string name="headline_followed">Followed by %1$s(@%2$s)</string>
    <string name="headline_unfollowed">Unfollowed by %1$s(@%2$s)</string>
</resources>
